# hunch

./: .gitignore  CLAUDE.md  NOTICE  README.md  VISION.md  pyproject.toml
configs/: deepseek_v4_openrouter.toml  gemini_pro_openrouter.toml  gemma4_31b_openrouter.toml  opus46_claude_cli.toml  sonnet_anthropic_sdk.toml  sonnet_claude_cli.toml  sonnet_openrouter.toml
docs/: backlog.md  benchmarks.md  critic_roadmap.md  critic_v0.1.md  critic_v0.md  critic_v1.md  critic_v1_wiki_design.md  eval_infrastructure.md  example_claude_md.md  example_critic_v1_claude_md.md  framework_v0.md  guide.md  hunch_bank_design.md  mining_pipeline.md  quickstart.md
hunch/: __init__.py  annotate.py  annotate_web.py  checkpoint.py  cli.py  doctor.py  init.py  panel.py  relay.py  render.py  run.py  start.py  tmux.py  trigger.py
scripts/: test_edit_panel.sh  test_live_context.sh
tests/: conftest.py  test_accumulator.py  test_annotate_web.py  test_backend_claude_cli.py  test_backend_config.py  test_backend_openrouter.py  test_bank.py  test_bank_sync.py  test_bank_tombstone_cli.py  test_capture_writer.py  test_checkpoint.py  test_cli_list_label.py  test_critic_context.py  test_critic_protocol.py  test_critic_sonnet.py  test_critic_sonnet_v01.py  test_default_critic.py  test_doctor.py  test_engine.py  test_filter.py  test_hook_async_delivery.py  test_hook_stop.py  test_hook_stop_delivery.py  test_hook_user_prompt_submit.py  test_init.py  test_journal.py  test_journal_concurrency.py  test_mine_chunker.py  test_mine_renderer.py  test_onboard.py  test_panel.py  test_parse_transcript.py  test_relay.py  test_render.py  test_replay_driver.py  test_replay_from_dir.py  test_run.py  (+8 more)
(+75 files in other folders)
