[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hunch"
version = "0.0.1"
description = "A meeting-room critic for agentic research"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Ariel Gordon"}]
dependencies = [
    "anthropic>=0.25.0",
    "flask>=3.0",
    "textual>=0.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
hunch = "hunch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hunch*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"hunch.critic" = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
